[gd_scene load_steps=10 format=3 uid="uid://bjbchvh8qefn7"]

[ext_resource type="Script" path="res://Scripts/inCaveParallaxBackground.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://sfsfwjpfsa36" path="res://Assets/img/Backgrounds/inCave/BackGround-inCave4.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dumq6myo58i36" path="res://Assets/img/Backgrounds/inCave/BackGround-inCave3.png" id="3"]
[ext_resource type="Texture2D" uid="uid://gomt6y3myau0" path="res://Assets/img/Backgrounds/inCave/BackGround-inCave6.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b70e7vtodxnra" path="res://Assets/img/Backgrounds/inCave/BackGround-inCave1.png" id="5"]
[ext_resource type="Texture2D" uid="uid://6hf4a7ety2m2" path="res://Assets/img/Backgrounds/inCave/BackGround-inCave2.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bkkrj0jkrvr4x" path="res://Assets/img/AdventurePack-Grassland-Assets.png" id="7_muoug"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kc3o8"]
texture = ExtResource("7_muoug")
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
17:2/0 = 0
18:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
0:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
0:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
9:6/0 = 0
10:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
15:7/0 = 0
17:7/0 = 0
18:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
16:8/0 = 0
18:8/0 = 0
19:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
15:10/0 = 0
17:10/0 = 0
18:10/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
9:18/0 = 0
10:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
21:24/0 = 0
22:24/0 = 0
23:24/0 = 0
24:24/0 = 0

[sub_resource type="TileSet" id="TileSet_iuek7"]
sources/0 = SubResource("TileSetAtlasSource_kc3o8")

[node name="ParallaxBackground" type="ParallaxBackground"]
script = ExtResource("1")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="BackGround-inCave6" type="Sprite2D" parent="ParallaxLayer5"]
position = Vector2(120, 67.5)
texture = ExtResource("4")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="BackGround-inCave4" type="Sprite2D" parent="ParallaxLayer4"]
position = Vector2(120, 67.5)
texture = ExtResource("2")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="BackGround-inCave3" type="Sprite2D" parent="ParallaxLayer3"]
position = Vector2(120, 67.5)
texture = ExtResource("3")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="BackGround-inCave2" type="Sprite2D" parent="ParallaxLayer2"]
position = Vector2(120, 67.5)
texture = ExtResource("6")

[node name="ParallaxLayer" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="BackGround-inCave1" type="Sprite2D" parent="ParallaxLayer"]
position = Vector2(120, 67.5)
texture = ExtResource("5")

[node name="LayerFloor" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(240, 0)

[node name="TileMap" type="TileMap" parent="LayerFloor"]
tile_set = SubResource("TileSet_iuek7")
format = 2
layer_0/tile_data = PackedInt32Array(393216, 196608, 10, 393217, 196608, 10, 393218, 196608, 10, 393219, 196608, 10, 393220, 196608, 10, 393221, 131072, 11, 393222, 196608, 11, 393223, 196608, 11, 393224, 262144, 11, 393225, 196608, 10, 393226, 196608, 10, 393227, 196608, 10, 393228, 196608, 10, 393229, 196608, 10, 393230, 196608, 10, 458752, 196608, 12, 458753, 196608, 12, 458754, 196608, 12, 458755, 196608, 12, 458756, 196608, 12, 458757, 196608, 12, 458758, 196608, 12, 458759, 196608, 12, 458760, 196608, 12, 458761, 196608, 12, 458762, 196608, 12, 458763, 196608, 12, 458764, 196608, 12, 458765, 196608, 12, 458766, 196608, 12, 524288, 0, 3, 524289, 0, 3, 524290, 0, 3, 524291, 0, 3, 524292, 0, 3, 524293, 0, 3, 524294, 0, 3, 524295, 0, 3, 524296, 0, 3, 524297, 0, 3, 524298, 0, 3, 524299, 0, 3, 524300, 0, 3, 524301, 0, 3, 524302, 0, 3, 327694, 1114112, 2, 327682, 1114112, 2, 327688, 1179648, 2, 327681, 1179648, 2)
